--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,5 +13,8 @@ jobs:
     name: lint
     runs-on: ubuntu-22.04
     steps:
+      - name: test
+        run: |
+          echo "ssssssssssssssssss"
       - run: |
           exit 1
